MP-3005 Overlapping issue fixed in author instance by removing height 48px

--- a/ui.frontend/src/main/webpack/components/content/core-card/v1/card/style.scss
+++ b/ui.frontend/src/main/webpack/components/content/core-card/v1/card/style.scss
@@ -37,7 +37,6 @@
     .grouped-form {
         form {
             width: 100%;
-            height: 48px;
             @include media-breakpoint-down(md) {
                 height: auto;
             }
